fixing the spacing
don't mind the change in the header

--- a/style.css
+++ b/style.css
@@ -58,9 +58,23 @@ h1.wp-block-heading {
     color: white;
 }
 
+h1.wp-block-post-title {
+    padding: 0 !important;
+}
+
 .wp-block-buttons a{
     border-radius: 5px;
     font-weight: 700;
+}
+
+.our-story .wp-block-media-text__content,
+.our-community .wp-block-media-text__content {
+        padding:24px 48px  0 0 !important;
+        
+}
+
+.members-content {
+    padding: 48px 0;
 }
 
 .footer-container {
@@ -72,6 +86,9 @@ footer {
     background-color: #314087;
 }
 
+.wp-block-post-title {
+    padding: 0 24px !important;
+}
 /*Home:Hero-Banner*/
     section.hero {
         background:linear-gradient(0deg,rgb(6,26,38) 0%,rgb(49,64,135) 57%);
@@ -116,6 +133,10 @@ footer {
         text-align: left;
     }
 
+    #modal-1 {
+        padding: 24px;
+    }
+
 /*Home:About-us*/
 
     .about-us-home.wp-block-group{
@@ -123,7 +144,7 @@ footer {
         background-size: cover;
         background-repeat: no-repeat !important;
         margin-top: 0 !important;
-        padding: 48px;
+        padding: 48px 24px;
         
     }
 
@@ -137,7 +158,7 @@ footer {
     .conference-home {
         background-color: #eeeeee;
         margin-top: 0 !important;
-        padding: 48px;
+        padding: 48px 24px;
     }
 
 /*About-us*/
@@ -157,6 +178,14 @@ footer {
         
 }
 
+    section.wp-block-cover {
+        padding: 48px 24px;
+    }
+
+    section.wp-block-cover:last-of-type {
+        margin-bottom: 24px;
+    }
+
 
 
 /*mobile*/
@@ -167,11 +196,14 @@ footer {
 
     h1.wp-block-heading {
         font-size: 40px;
+        padding: 0 !important;
     }
-
+    h1.wp-block-post-title {
+    padding-left: 24px !important;
+    }
     /*Home*/
     .hero-content{
-        padding: 48px;
+        padding: 48px 24px;
     }
     .about-us-home.wp-block-group,
     .about-us-home.wp-block-group  {
@@ -179,6 +211,10 @@ footer {
         background-size: cover;
         background-position: center;
        
+    }
+
+    .conference-home h2 {
+        padding-top: 24px;
     }
 
     .about-us-content {
@@ -189,6 +225,11 @@ footer {
         padding: 0;
         gap: 0;
     }
+
+    .wp-block-media-text__content {
+        padding:24px 0 0 0 !important;
+    }
+   
      /*our-story*/
     .our-story>span.wp-block-cover__background {
     background-image: url('http://k40.32b.myftpupload.com/wp-content/uploads/2025/11/our-story-mobile.png') !important;
@@ -205,21 +246,34 @@ footer {
     background-position: center !important;
     }
 
+    .members-content {
+    padding: 48px 24px;
+}
     footer {
-        padding: 48px;
+        padding: 24px;
     }
 }
 
 @media (max-width: 1200px) {
     .add-padding {
-        padding: 0px 1rem 1rem 1rem !important;
+        padding: 0px 1.5rem 1.5rem 1.5rem !important;
     }
-
-    h1 {
+     h1.wp-block-post-title {
+    padding-left: 24px !important;
+    }
+    /* h1 {
         padding: 0px 1rem 0px 1rem !important;
+    } */
+    
+    .our-story .wp-block-media-text__content,
+    .our-community .wp-block-media-text__content {
+        padding:24px 48px  0 0 !important;
+        
     }
-
+        .members-content {
+    padding: 48px 24px;
+}
     footer {
-        padding: 48px;
+        padding: 24px;
     }
 }
